<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/rootLayout"
    android:layout_marginTop="50dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/metrikTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/metrikAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="200dp"
                android:hint="@string/pilih_metrik"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/satuanContainerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metrikTextInputLayout"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dari"
                    android:textSize="22sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/satuan1TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/satuan1AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownHeight="120dp"
                        android:hint="@string/pilih_satuan"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ke"
                    android:textSize="22sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/satuan2TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/satuan2AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownHeight="120dp"
                        android:hint="@string/pilih_satuan"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/nilaiAwalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/satuanContainerLinearLayout"
            android:layout_marginTop="25dp"
            android:hint="@string/masukkan_nilai_awal"
            android:paddingVertical="22dp"
            android:textAlignment="center"
            android:inputType="number"/>

        <TextView
            android:id="@+id/hasilTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/nilaiAwalEditText"
            android:layout_marginTop="50dp"
            android:background="#007271"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>